Added length for Uuid to fit.

--- a/force-app/main/default/classes/CombinedFunctions.cls
+++ b/force-app/main/default/classes/CombinedFunctions.cls
@@ -378,28 +378,36 @@ global class CombinedFunctions {
 
     @AuraEnabled
     global static void createRegistrationBatch(List<Id> offerings, List<Id> contacts, Id sponsorAccount, Double responsibility) {
+        Registration_Batch__c batch = new Registration_Batch__c(Sponsor__c = sponsorAccount, Default_Transfer__c = responsibility);
         try {
-            Registration_Batch__c batch = new Registration_Batch__c(Sponsor__c = sponsorAccount, Default_Transfer__c = responsibility);
-    
             insert batch;
+        } catch(Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
+
+        try {
             List<Registration_Request__c> batchEnrollments = new List<Registration_Request__c>();
             for(Id offering : offerings) {
                 for(Id contact : contacts) {
                     batchEnrollments.add(
                         new Registration_Request__c(
-                            Student__c = contact, Course_Offering__c = offering, 
+                            Student__c = contact, 
+                            Course_Offering__c = offering, 
                             Registration_Batch__c = batch.Id, 
-                            Line_Item_ID__c = (new Uuid().getValue())
+                            Line_Item_ID__c = (new Uuid()).getValue()
                         )
                     );
                 }
             }
             insert batchEnrollments;
+        } catch(Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
+        try {
             batch.Is_Ready__c = true;
 
             update batch;
         } catch(Exception e) {
-            // Roll it back.
             throw new AuraHandledException(e.getMessage());
         }
     }
