EnrollmentType - updates for pending enrollments.

--- a/force-app/main/default/classes/CombinedFunctions.cls
+++ b/force-app/main/default/classes/CombinedFunctions.cls
@@ -80,6 +80,9 @@ global class CombinedFunctions {
             } else {
                 enrollment.hed__Status__c = 'Enrolled';
             }
+            if(enrollmentType != null) {
+                enrollment.RecordTypeId = enrollmentType.Id;
+            }
 
             update enrollment;
         }
