Initial Middleware webhook call added.

--- a/force-app/main/default/classes/BaseTestUtil.cls
+++ b/force-app/main/default/classes/BaseTestUtil.cls
@@ -5,6 +5,14 @@ global with sharing class BaseTestUtil {
         return new EventCalloutMock();
     }
 
+    global static HttpCalloutMock getMiddlewareMock(MiddlewareIntegration.MiddlewareActionResponse response) {
+        return getBasicMiddlewareMock(JSON.serialize(response));
+    }
+
+    global static HttpCalloutMock getBasicMiddlewareMock(String body) {
+        return new MiddlewareMock(body);
+    }
+
     global class EventCalloutMock implements HttpCalloutMock{
         global HttpResponse respond(HTTPRequest req){
           HttpResponse res = new HttpResponse();
@@ -15,6 +23,20 @@ global with sharing class BaseTestUtil {
         }
     }
 
-    
+    global class MiddlewareMock implements HttpCalloutMock {
+
+        private String body;
+        global MiddlewareMock(String body) {
+            this.body = body;
+        }
+
+        global HttpResponse respond(HTTPRequest req){
+            HttpResponse res = new HttpResponse();
+            res.setStatus('OK');
+            res.setStatusCode(200);
+            res.setBody(body);
+            return res;
+          }
+    }
     
 }
