--- a/force-app/main/default/classes/MiddlewareIntegration_TEST.cls
+++ b/force-app/main/default/classes/MiddlewareIntegration_TEST.cls
@@ -25,10 +25,10 @@ global class MiddlewareIntegration_TEST {
         Test.startTest();
         Test.setMock(HttpCalloutMock.class, BaseTestUtil.getMiddlewareMock(new MiddlewareIntegration.MiddlewareActionResponse(true, 'Test Message', new Map<String, String>{'status' => 'RW'})));
 
-        MiddlewareIntegration.getEnrollmentStatus(true, '2023SP-CO-333-100', 'test-person');
+        String result = MiddlewareIntegration.getEnrollmentStatus(true, '2023SP-CO-333-100', 'test-person');
         Test.stopTest();
 
-        System.assertEquals('RW', results.get(0).hed__Status__c, 'Status not set properly.');
+        System.assertEquals('RW', result, 'Status not set properly.');
     }
     
 }
