comitting just to get a version out.

--- a/force-app/main/default/classes/MiddlewareIntegration.cls
+++ b/force-app/main/default/classes/MiddlewareIntegration.cls
@@ -54,4 +54,6 @@ global with sharing class MiddlewareIntegration {
         return null;
     }
 
+    //TODO: Implement other middleware calls here I guess.
+
 }
